fixed Ad size parameters on tooltip in tactics are getting truncated

--- a/app/assets/stylesheets/campaign_details.less
+++ b/app/assets/stylesheets/campaign_details.less
@@ -12,6 +12,9 @@
 body {
   font-family: "Avenir" ;
 }
+.tooltip {
+    word-wrap: break-word;
+}
 .no-chart , .no_data_found {
   color: #939ead;
   line-height: 20px;
